// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match snapshot 1`] = `
<div>
  <div>
    <Jss(Brand) />
    <Jss(Navigation) />
  </div>
</div>
`;

exports[`should render children 1`] = `
<div>
  <div>
    <Jss(Brand) />
    <Jss(Navigation) />
  </div>
  <Child />
</div>
`;
